--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,14 @@
-name: Build and test
+name: Build & Publish Release APK
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    tags:
+      - '*'
 
 jobs:
   build:
     runs-on: macos-13 # to be able to run Android emulator, see https://github.com/marketplace/actions/android-emulator-runner
-    
+
     strategy:
       fail-fast: false
       matrix:
@@ -35,3 +34,25 @@ jobs:
           profile: Nexus 6
           script: ./gradlew build connectedCheck -PbuildServer -Pandroid.testInstrumentationRunnerArguments.notAnnotation=androidx.test.filters.LargeTest --stacktrace
 
+  # Gradle:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: checkout code
+  #     uses: actions/checkout@v2
+  #   - name: setup jdk
+  #     uses: actions/setup-java@v1
+  #     with:
+  #       java-version: 11
+  #   - name: Make Gradle executable
+  #     run: chmod +x ./gradlew
+  #   - name: Build Release APK
+  #     run: ./gradlew assembleRelease
+  #   - name: Releasing using Hub
+  #     uses: jooooscha/action-release-releaseapk@master
+  #     env:
+  #      GITHUB_TOKEN: ${{ secrets.RELEASETOKEN }}
+  #      VERSION_VARIABLE: versionName
+  #      APP_FILE: buildSrc/Android.kt
+  #      APP_FOLDER: app
+  #      RELEASE_TITLE: New Build
+  #      NAME_VARIABLE: app-release.apk
